# erlang-tc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rebar.config
.cargo/: config.toml
crates/native/: Cargo.toml
crates/native/src/: atom.rs  bin.rs  bivar_poly.rs  ciphertext.rs  fr.rs  g1.rs  g1_affine.rs  lazy_binary.rs  lib.rs  pk.rs  pk_set.rs  pk_share.rs  poly.rs  sk.rs  sk_set.rs  sk_share.rs
eqc/: secret_key_match_eqc.erl
native/: atom.rs  bivar_commitment.rs  bivar_poly.rs  ciphertext.rs  commitment.rs  dec_share.rs  fr.rs  g1.rs  g1_affine.rs  g2.rs  lib.rs  pk.rs  pk_set.rs  pk_share.rs  poly.rs  sig.rs  sig_share.rs  sk.rs  sk_set.rs  sk_share.rs
src/: bicommitment.erl  bipoly.erl  ciphertext.erl  commitment.erl  decryption_share.erl  erlang_tc.app.src  erlang_tc.erl  erlang_tc_bicommitment.erl  erlang_tc_bipoly.erl  erlang_tc_ciphertext.erl  erlang_tc_commitment.erl  erlang_tc_dec_share.erl  erlang_tc_fr.erl  erlang_tc_g1.erl  erlang_tc_g1_affine.erl  erlang_tc_g2.erl  erlang_tc_pk.erl  erlang_tc_pk_set.erl  erlang_tc_pk_share.erl  erlang_tc_poly.erl  erlang_tc_sig.erl  erlang_tc_sig_share.erl  erlang_tc_sk.erl  erlang_tc_sk_set.erl  erlang_tc_sk_share.erl  fr.erl  g1.erl  g1_affine.erl  g2.erl  poly.erl  pubkey.erl  public_key.erl  public_key_set.erl  public_key_share.erl  secret_key.erl  secret_key_set.erl  secret_key_share.erl  signature.erl  signature_share.erl  tc_bicommitment.erl  (+18 more)
test/: bicommitment_SUITE.erl  bipoly_SUITE.erl  bipoly_test.erl  chat_network.erl  dealer_test.erl  dist_chat_network.erl  dist_secret_society.erl  dist_threshold_enc_SUITE.erl  dist_threshold_sig_SUITE.erl  dkg_SUITE.erl  dkg_test.erl  key_SUITE.erl  key_test.erl  pkc_test.erl  poly_SUITE.erl  (+5 more)
(+1 files in other folders)
