[package]
name = "native"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native"
crate-type = ["dylib"]
path = "native/lib.rs"

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git", branch = "master" }
threshold_crypto = { git = "https://github.com/vihu/threshold_crypto", branch = "rg/integrate" }
rand = "0.7.3"
zeroize = "1.1.0"
